[gd_scene load_steps=5 format=3 uid="uid://vt0xpit7op4k"]

[ext_resource type="Script" path="res://Main.gd" id="1_gw2g3"]
[ext_resource type="PackedScene" uid="uid://b57v4sqra64eh" path="res://Wheel.tscn" id="1_q8r8g"]
[ext_resource type="PackedScene" uid="uid://dwbs76452aiiw" path="res://Settings.tscn" id="3_ep6r6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mpbm3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gw2g3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Wheel" parent="." instance=ExtResource("1_q8r8g")]
layout_mode = 1

[node name="Foreground" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Foreground"]
material = SubResource("CanvasItemMaterial_mpbm3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.631373, 0, 0.976471)

[node name="Settings_Screen" parent="Foreground" instance=ExtResource("3_ep6r6")]
layout_mode = 1

[node name="SettingsLayout" type="Control" parent="Foreground"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1032.0
offset_top = 528.0
offset_right = 1112.0
offset_bottom = 608.0
grow_horizontal = 0
grow_vertical = 0

[node name="SettingsButton" type="Button" parent="Foreground/SettingsLayout"]
layout_mode = 1
offset_right = 60.0
offset_bottom = 60.0

[node name="Results_Screen" type="Control" parent="Foreground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="show_result" from="Wheel" to="." method="_on_wheel_show_result"]
[connection signal="pressed" from="Foreground/SettingsLayout/SettingsButton" to="." method="_on_settings_button_pressed"]
